--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-body{
-  
+:root {
+  --primary: #334155;
+  --secondary: #b91c1c;
+  --gray: #94a3b8;
+  --dark-gray: #34383d;
+  --white: #ffffff;
 }
-.logo{
-  text-align: left;
-}
-.menu-links{
-  text-align: right;
-  margin-bottom: 200px;
-  display: inline;
+.Navigation{
+  background-color: var(--primary);
+  padding: 1rem 0rem;
+  color: var(--white);
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
   position: relative;
-  background-color: aqua;
+  text-align: center;
+}
+.Navigation title{
+  text-align: center;
+  position: absolute;
+  background-color: var(--white) ;
 }
