--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   --gray: #94a3b8;
   --dark-gray: #34383d;
   --white: #ffffff;
+  --blue:#0096c7;
+
 }
 
 body {
@@ -29,19 +31,10 @@ hr {
 /* px, em, rem  1rem = 16px*/
 
 /* containers */
-.container-fluid {
+.nav {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
-.container {
-  margin: auto;
-  /* padding-left: 1rem;
-  padding-right: 1rem; */
-  padding: 0 1rem;
-  max-width: 600px;
-}
-
 /* Links */
 
 .link {
@@ -52,16 +45,12 @@ hr {
   text-decoration: none;
   transition: transform 0.2s;
 }
-
-/* .link:hover {
-  transform: scale(1.2);
-} */
-
 .primary-link {
   color: var(--white);
   background-color: var(--primary);
   border: 1px solid var(--primary);
   border-radius: 0.5rem;
+  text-align: center;
 }
 
 .secondary-link {
@@ -69,30 +58,8 @@ hr {
   background-color: var(--secondary);
   border: 1px solid var(--secondary);
   border-radius: 0.5rem;
+  text-align: center;
 }
-
-.primary-link-outline {
-  color: var(--dark-gray);
-  border: 1px solid var(--primary);
-  border-radius: 0.5rem;
-}
-
-.secondary-link-outline {
-  color: var(--dark-gray);
-  border: 1px solid var(--secondary);
-  border-radius: 0.5rem;
-}
-/* Lists */
-
-.unlisted {
-  list-style: none;
-}
-
-.list-inline li {
-  display: inline;
-  padding: 0rem 0.5rem;
-}
-
 /* nav */
 .navigation {
   background-color: var(--primary);
@@ -103,9 +70,12 @@ hr {
   position: relative;
 }
 
-.navigation .brand-name {
+.navigation .title {
   font-weight: 700;
   position: absolute;
+}
+.link:hover{
+  color: azure;
 }
 
 .navigation ul {
@@ -129,23 +99,14 @@ hr {
 }
 
 /* Header */
-.hero {
-  color: var(--dark-gray);
-  display: block;
+.image{
+  text-align: center;
 }
+.btn1:hover{
+  transform: scale(1,2);
+  background-color:var(--secondary);
 
-.hero img {
-  max-width: 350px;
-  margin: auto;
-  display: block;
 }
-.hero img.profile {
-  height: 250px;
-  width: 250px;
-  border-radius: 50%;
-  border: 1px solid var(--dark-gray);
-}
-
 /* sections */
 section {
   padding: 2rem 0.5rem;
@@ -159,6 +120,10 @@ section h2 {
 section.gray {
   background-color: var(--dark-gray);
   color: var(--white);
+}
+.project{
+  background-color: aqua;
+  text-align: center;
 }
 
 /* footer */
@@ -184,4 +149,7 @@ footer ul {
 footer ul li a {
   text-decoration: none;
   color: var(--white);
+}
+.list-inline li{
+  display: inline;
 }
